# ml_iitd_workshop

./: .gitignore  data.dvc  download_mnist.py  pyproject.toml
.dvc/: config
src/: demo.py  train.py
src/utils/: create_examples.py
