[tool.poetry]
name = "ml-iitd-workshop"
version = "0.1.0"
description = "MLOps workshop at IIT Delhi"
authors = ["Saurabh Kumar <saurabhkumar8112@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
torchvision = "^0.20.1"
wandb = "^0.18.6"
gradio = "^5.5.0"
dvc = {extras = ["gs"], version = "^3.56.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
